<resources>
    <string name="app_name">Fuqua</string>
    <string name="data_text">Data</string>
    <string name="history_text">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text">Home</string>
    <string name="notifications_text">Notifications</string>
    <string name="employee_id">Employee ID</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="energy_and_fluids_text"><![CDATA[DELIVER QUALITY SERVICES]]></string>
</resources>
