<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="30dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_home_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/energy_and_fluids_text"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/employee_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/employee_id"
                    android:inputType="none"
                    android:textColorHint="@color/colorOffWhite"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/input_shape_style"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorWhite"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorOffWhite"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/input_shape_style"/>

                <CheckBox
                    android:id="@+id/show_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_password"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorOffWhite"/>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_style"
                    android:onClick="login"/>

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOffWhite"
                    android:layout_marginTop="15dp"
                    android:text="@string/forgot_password"
                    android:textStyle="italic"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/register"
                    android:textStyle="bold"

                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

         </RelativeLayout>

</LinearLayout>